@@ -19,35 +19,37 @@ configurations {
 repositories {
     mavenCentral()
 }
+ext {
+    mapstructVersion = "1.4.1.Final"
+}
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation("org.mapstruct:mapstruct:${mapstructVersion}")
+    compileOnly "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
     testImplementation 'io.projectreactor:reactor-test'
 
 }
 
-
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
 jacoco {
     toolVersion = "0.8.8"
-    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
 jacocoTestReport {
     dependsOn test
-
     afterEvaluate {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
-                    "com/petclinic/**/AuthServiceApplication.class",
+                    "com/petclinic/visits/visitsservicenew/VisitsServiceNewApplication.class",
             ])
         }))
     }
@@ -68,6 +70,7 @@ check.dependsOn jacocoTestCoverageVerification
 
 
 test {
+    jvmArgs '--enable-preview'
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
